# CircuitPython_SX126X

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  sx126x.py
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: sx126x_simpletest.py
